force-app/main/default/objects/Stock__c/fields/Highest_Price__c.field-meta.xml
<CustomField>
    <fullName>Highest_Price__c</fullName>
    <label>Highest Price</label>
    <summarizedField>Stock_Price_Tick__c.Price__c</summarizedField>
    <summaryForeignKey>Stock_Price_Tick__c.Stock__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>