force-app/main/default/objects/Stock__c/fields/Last_Close_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Close_Price__c</fullName>
    <description>The last close price of the Stock</description>
    <label>Last Close Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>