force-app/main/default/objects/Stock__c/fields/Lowest_Price__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Price__c</fullName>
    <description>The lowest price this Stock has recorded</description>
    <label>Lowest Price</label>
    <summarizedField>Stock_Price_Tick__c.Price__c</summarizedField>
    <summaryForeignKey>Stock_Price_Tick__c.Stock__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>